# QRegexWidget

./: CMakeLists.txt  PKGBUILD  QRegexWidget.desktop  QRegexWidget.kdev4  README  Resources.qrc
src/: main.cpp  qregexwidget.cpp  qregexwidget.h  qregexwidget.ui
